# UniLasso

./: README.md  main.py  pyproject.toml
notebook/: gp-regression.ipynb  isotonic-regression.ipynb  unilasso.ipynb
unilasso/: data.py  model.py  plotting.py  summary.py
